cluster/apps/external/nas/nas-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "500m"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: "nas.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/ttl: "120"
  name: external-ingress-nas
  namespace: default
spec:
  ingressClassName: "nginx"
  rules:
  - host: &host nas.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nas
              port:
                number: 5001
  tls:
    - hosts:
      - *host
      secretName: wildcard-cert-tls
